@@ -4821,7 +4821,12 @@ return nil."
 	  (require-final-newline nil))
       (insert image-data)
       (let* ((args
-	      `(,(if src-type (format "%s:-" src-type) "-")
+	      `(,@(when (<= emacs-major-version 22)
+		    ;; Emacs22 and earlier raises "Color allocation error"
+		    ;; on decoding a XPM image with opacity. To ignore
+		    ;; opacity, the option "+matte" is added.
+		    '("+matte"))
+		,(if src-type (format "%s:-" src-type) "-")
 		,@(when (integerp twittering-convert-fix-size)
 		    `("-resize"
 		      ,(format "%dx%d" twittering-convert-fix-size
